--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.madpractical9_20012021017">
+    <uses-permission android:name="android.permission.RECEIVE_SMS"/>
+    <uses-permission android:name="android.permission.READ_SMS"/>
+    <uses-permission android:name="android.permission.SEND_SMS"/>
 
     <application
         android:allowBackup="true"
@@ -13,6 +16,17 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MADPractical9_20012021017"
         tools:targetApi="31">
+        <receiver
+            android:name=".smsbroadcastreciever"
+            android:enabled="true"
+            android:exported="true">
+
+            <intent-filter>
+                <action android:name="Telephony.Sms.Intents.SMS.RECEIVED_ACTION"/>
+            </intent-filter>
+
+        </receiver>
+
         <activity
             android:name=".MainActivity"
             android:exported="true">
